--- a/mobile/Base.lproj/Main.storyboard
+++ b/mobile/Base.lproj/Main.storyboard
@@ -187,9 +187,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="ERE-uy-pR1">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="Ufl-II-ehb" id="pWd-MR-aUI"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="SJF-7B-4Xm" detailTextLabel="PdH-Eg-OsH" style="IBUITableViewCellStyleSubtitle" id="0qo-UO-W86">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0qo-UO-W86" id="2c5-7x-NgC">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -220,11 +228,22 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Members" id="skx-zs-XeK"/>
                     <connections>
+                        <outlet property="searchBar" destination="ERE-uy-pR1" id="Ecp-Q6-EqS"/>
+                        <outlet property="searchDisplayController" destination="Uyg-qg-V06" id="sSN-QU-6Y9"/>
                         <outlet property="tableView" destination="1l9-Qf-B4G" id="dJu-VM-Xal"/>
                         <segue destination="Qva-Jx-bgt" kind="push" identifier="ViewMember" id="XY4-5T-gqt"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J1y-Bb-4d1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Uyg-qg-V06">
+                    <connections>
+                        <outlet property="delegate" destination="Ufl-II-ehb" id="vWJ-Vm-2tZ"/>
+                        <outlet property="searchBar" destination="ERE-uy-pR1" id="VQw-4v-YwW"/>
+                        <outlet property="searchContentsController" destination="Ufl-II-ehb" id="9n5-ho-MUR"/>
+                        <outlet property="searchResultsDataSource" destination="Ufl-II-ehb" id="UFT-lu-DWf"/>
+                        <outlet property="searchResultsDelegate" destination="Ufl-II-ehb" id="SWl-z7-I9Z"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="3019" y="1967"/>
         </scene>
@@ -342,10 +361,10 @@
             </objects>
             <point key="canvasLocation" x="803" y="-1444"/>
         </scene>
-        <!--View Controller - Events-->
+        <!--Circle Events View Controller - Events-->
         <scene sceneID="o0s-YR-cJF">
             <objects>
-                <viewController id="YWV-Tp-8f9" sceneMemberID="viewController">
+                <viewController id="YWV-Tp-8f9" customClass="CircleEventsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pkM-RU-5Be"/>
                         <viewControllerLayoutGuide type="bottom" id="LNY-El-H4z"/>
@@ -354,21 +373,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Events" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLc-lK-4mG">
-                                <rect key="frame" x="134" y="273" width="52" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2az-i7-ox1">
+                                <rect key="frame" x="0.0" y="65" width="320" height="503"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Events" image="Events" badgeValue="30" id="Mtx-xU-JaB"/>
+                    <navigationItem key="navigationItem" title="Events" id="3pM-8e-aRH"/>
+                    <connections>
+                        <outlet property="calendarView" destination="2az-i7-ox1" id="szQ-Xt-q6o"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HWu-S9-2in" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1514" y="-1444"/>
+            <point key="canvasLocation" x="2040" y="-1444"/>
         </scene>
         <!--Add Relation View Controller - Add Relation-->
         <scene sceneID="1LK-1f-XMS">
@@ -477,14 +497,6 @@
                     <view key="view" contentMode="scaleToFill" id="gla-Hp-zZP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Events" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWd-dO-m1L">
-                                <rect key="frame" x="134" y="273" width="52" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="IIS-w5-U3H"/>
@@ -748,7 +760,7 @@
                     <connections>
                         <segue destination="ofv-3b-Zmg" kind="relationship" relationship="viewControllers" id="DBz-WV-DQZ"/>
                         <segue destination="ZpP-oy-30f" kind="relationship" relationship="viewControllers" id="Hst-JM-laj"/>
-                        <segue destination="YWV-Tp-8f9" kind="relationship" relationship="viewControllers" id="c18-uz-PGP"/>
+                        <segue destination="l0D-hE-QjR" kind="relationship" relationship="viewControllers" id="c18-uz-PGP"/>
                         <segue destination="gGb-Gr-FPU" kind="relationship" relationship="viewControllers" id="nuN-Zx-Wmc"/>
                     </connections>
                 </tabBarController>
@@ -794,6 +806,25 @@
             </objects>
             <point key="canvasLocation" x="1514" y="1358"/>
         </scene>
+        <!--Navigation Controller - Events-->
+        <scene sceneID="o7D-nv-zdB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="l0D-hE-QjR" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Events" image="Events" badgeValue="30" id="Mtx-xU-JaB"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GNU-iT-0aV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="YWV-Tp-8f9" kind="relationship" relationship="rootViewController" id="RaH-FC-N3M"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tA9-EN-SOr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1514" y="-1444"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Circles" width="30" height="20"/>
@@ -807,6 +838,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="XY4-5T-gqt"/>
+        <segue reference="C54-Ej-jEw"/>
     </inferredMetricsTieBreakers>
 </document>
