--- a/mobile/Base.lproj/Main.storyboard
+++ b/mobile/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ofv-3b-Zmg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="DTC-lY-A4W">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -247,6 +247,98 @@
             </objects>
             <point key="canvasLocation" x="3019" y="1967"/>
         </scene>
+        <!--Events Table View Controller - View Events-->
+        <scene sceneID="UzY-KT-AfY">
+            <objects>
+                <tableViewController id="N3R-pj-CSp" customClass="EventsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="5GV-0q-Gca">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="4AJ-Xr-NjK" detailTextLabel="Bgl-Qk-3oz" style="IBUITableViewCellStyleValue1" id="xmt-DY-bfj">
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xmt-DY-bfj" id="pX7-Rl-Chj">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4AJ-Xr-NjK">
+                                            <rect key="frame" x="15" y="11" width="33" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Bgl-Qk-3oz">
+                                            <rect key="frame" x="261" y="11" width="44" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="N3R-pj-CSp" id="usu-st-dky"/>
+                            <outlet property="delegate" destination="N3R-pj-CSp" id="goB-lI-mrS"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="View Events" id="wGy-QC-jIs">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="K4d-Tx-nfk">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="zgl-Im-GDb">
+                                <rect key="frame" x="233" y="5" width="71" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Add">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="lVZ-g2-Rw4" kind="push" identifier="AddEvent" id="6X0-3m-nXz"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T1x-Qc-QQb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2040" y="-1454"/>
+        </scene>
+        <!--Add Event View Controller - Add Event-->
+        <scene sceneID="d9X-KB-opT">
+            <objects>
+                <viewController id="lVZ-g2-Rw4" customClass="AddEventViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nS5-lU-Olp"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZFd-Xa-6Ji"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Mbs-dh-roq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Event" id="1H0-zI-vrX">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="m54-pb-NDu">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="0EV-si-kde">
+                                <rect key="frame" x="233" y="5" width="71" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Add">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addEvent:" destination="lVZ-g2-Rw4" eventType="touchUpInside" id="B5a-OF-qkp"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IlJ-Gh-o5J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2600" y="-1454"/>
+        </scene>
         <!--View Controller - Settings-->
         <scene sceneID="q20-bH-zcs">
             <objects>
@@ -361,35 +453,6 @@
             </objects>
             <point key="canvasLocation" x="803" y="-1444"/>
         </scene>
-        <!--Circle Events View Controller - Events-->
-        <scene sceneID="o0s-YR-cJF">
-            <objects>
-                <viewController id="YWV-Tp-8f9" customClass="CircleEventsViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="pkM-RU-5Be"/>
-                        <viewControllerLayoutGuide type="bottom" id="LNY-El-H4z"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="BC8-tS-28h">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2az-i7-ox1">
-                                <rect key="frame" x="0.0" y="65" width="320" height="503"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Events" id="3pM-8e-aRH"/>
-                    <connections>
-                        <outlet property="calendarView" destination="2az-i7-ox1" id="szQ-Xt-q6o"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HWu-S9-2in" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2040" y="-1444"/>
-        </scene>
         <!--Add Relation View Controller - Add Relation-->
         <scene sceneID="1LK-1f-XMS">
             <objects>
@@ -418,7 +481,7 @@
                                 <rect key="frame" x="112" y="130" width="97" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date of Birth" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yl9-BX-GgY">
                                 <rect key="frame" x="112" y="168" width="97" height="30"/>
@@ -509,13 +572,13 @@
         <scene sceneID="4lG-OV-xjD">
             <objects>
                 <tableViewController id="Qva-Jx-bgt" customClass="ViewMemberTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wfm-ZX-Xw0">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="wfm-ZX-Xw0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="EtO-1m-hOg" detailTextLabel="TRa-Vj-KJY" style="IBUITableViewCellStyleValue2" id="kek-xR-8Tu">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kek-xR-8Tu" id="w9o-lW-k7U">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -539,7 +602,7 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AvatarCell" rowHeight="120" id="oYK-Gh-Et7" customClass="UIAvatarCellTableViewCell">
-                                <rect key="frame" x="0.0" y="130" width="320" height="120"/>
+                                <rect key="frame" x="0.0" y="163" width="320" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oYK-Gh-Et7" id="WgV-f4-05d">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
@@ -760,13 +823,13 @@
                     <connections>
                         <segue destination="ofv-3b-Zmg" kind="relationship" relationship="viewControllers" id="DBz-WV-DQZ"/>
                         <segue destination="ZpP-oy-30f" kind="relationship" relationship="viewControllers" id="Hst-JM-laj"/>
-                        <segue destination="l0D-hE-QjR" kind="relationship" relationship="viewControllers" id="c18-uz-PGP"/>
+                        <segue destination="o8X-A6-ZCp" kind="relationship" relationship="viewControllers" id="g8o-zb-AyE"/>
                         <segue destination="gGb-Gr-FPU" kind="relationship" relationship="viewControllers" id="nuN-Zx-Wmc"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oqR-7Z-GVA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="604" y="-9"/>
+            <point key="canvasLocation" x="803" y="-13"/>
         </scene>
         <!--Navigation Controller - Tree-->
         <scene sceneID="4Iz-Zd-cUL">
@@ -807,23 +870,23 @@
             <point key="canvasLocation" x="1514" y="1358"/>
         </scene>
         <!--Navigation Controller - Events-->
-        <scene sceneID="o7D-nv-zdB">
+        <scene sceneID="mUb-XX-qG9">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="l0D-hE-QjR" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Events" image="Events" badgeValue="30" id="Mtx-xU-JaB"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="o8X-A6-ZCp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Events" image="Events" id="B9M-CX-QHI"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GNU-iT-0aV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CiA-c5-bm6">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="YWV-Tp-8f9" kind="relationship" relationship="rootViewController" id="RaH-FC-N3M"/>
+                        <segue destination="N3R-pj-CSp" kind="relationship" relationship="rootViewController" id="Rrx-Wx-ahc"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tA9-EN-SOr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9yI-hz-bpf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1514" y="-1444"/>
+            <point key="canvasLocation" x="1514" y="-1454"/>
         </scene>
     </scenes>
     <resources>
